[gd_scene load_steps=8 format=1]

[ext_resource path="res://BLKCHCRY.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://exit.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shading_mode = 0

[sub_resource type="Theme" id=2]


[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]

font/size = 70
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[node name="Control" type="Control"]

material/material = SubResource( 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 3.0
margin/top = 0.0
margin/right = 1027.0
margin/bottom = 606.0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1026.0
margin/bottom = 607.0
script/script = ExtResource( 2 )

[node name="Exit" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 397.0
margin/top = 470.0
margin/right = 609.0
margin/bottom = 499.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false
script/script = ExtResource( 2 )

[node name="Create" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 397.0
margin/top = 390.0
margin/right = 610.0
margin/bottom = 420.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create character"
flat = false

[node name="Options" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 397.0
margin/top = 430.0
margin/right = 610.0
margin/bottom = 460.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="Load" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 397.0
margin/top = 350.0
margin/right = 610.0
margin/bottom = 380.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="New Game" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 397.0
margin/top = 310.0
margin/right = 610.0
margin/bottom = 340.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Game"
flat = false
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 437.0
margin/top = 210.0
margin/right = 657.0
margin/bottom = 82130.0
custom_fonts/font = SubResource( 5 )
text = "Luna"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Panel/Exit" to="Panel" method="_on_Exit_pressed"]

[connection signal="pressed" from="Panel/Options" to="Panel/Exit" method="_on_Options_pressed"]

[connection signal="pressed" from="Panel/New Game" to="Panel/New Game" method="_on_New_Game_pressed"]


